tests/cases_invalid/assignments/undefined_assigned_values/.expected
error: could not find `undefined` value
 --> ./cases_invalid/assignments/undefined_assigned_values/main.shd:3:13
  |
3 |     value = undefined;
  |             ^^^^^^^^^ undefined identifier
  |
